--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,9 @@
 
 
     <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/viewPager">
+        android:layout_height="match_parent">
 
     </android.support.v4.view.ViewPager>
 
@@ -21,6 +21,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottommenue"></android.support.design.widget.BottomNavigationView>
+        app:menu="@menu/bottommenue" />
+
 
 </android.support.constraint.ConstraintLayout>
