--- a/app/src/main/res/layout/lot_table_cell.xml
+++ b/app/src/main/res/layout/lot_table_cell.xml
@@ -11,13 +11,14 @@
 
     <TextView
         android:id="@+id/lotName"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="22dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
         android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/freeLots"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Name" />
