Fixed input bug in InfoFragment Style Class renaming for better understanding

--- a/app/src/main/res/layout/lot_table_cell.xml
+++ b/app/src/main/res/layout/lot_table_cell.xml
@@ -17,6 +17,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/freeLots"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,9 +29,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lotName"
         tools:text="street" />
@@ -40,11 +41,11 @@
         android:layout_width="50dp"
         android:layout_height="25dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
+        android:gravity="end"
         android:text="TextView"
         android:textAlignment="textEnd"
-        android:gravity="end"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -55,11 +56,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
-        android:textAlignment="textEnd"
         android:gravity="end"
         android:text="TextView"
+        android:textAlignment="textEnd"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
         app:layout_constraintBottom_toBottomOf="@+id/streetName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/freeLots"
