--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#EF6C00</color>
-    <color name="colorPrimaryDark">#EF6C00</color>
+    <color name="colorPrimaryDark">#D84315</color>
     <color name="colorAccent">#2196F3</color>
     <color name="colorCell">#33cc33</color>
 </resources>
