Added App Icon and Splashscreen.

--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -33,7 +33,7 @@
         android:background="@color/colorPrimary"
         android:textColor="#FFFFFF"
         android:layout_marginStart="8dp"
-        android:text="Park Car"
+        android:text="@string/parkCar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
