--- a/app/src/main/res/layout/lot_table_cell.xml
+++ b/app/src/main/res/layout/lot_table_cell.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="@string/notAvailable"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/freeLots"
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="@string/notAvailable"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lotName"
@@ -43,7 +43,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
         android:gravity="end"
-        android:text="TextView"
+        android:text="@string/notAvailable"
         android:textAlignment="textEnd"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:textSize="20sp"
@@ -58,7 +58,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
         android:gravity="end"
-        android:text="TextView"
+        android:text="@string/notAvailable"
         android:textAlignment="textEnd"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
         app:layout_constraintBottom_toBottomOf="@+id/streetName"
