--- a/app/src/main/res/menu/bottommenue.xml
+++ b/app/src/main/res/menu/bottommenue.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+<menu
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/Parkplaetze"
         android:icon="@android:drawable/ic_menu_myplaces"
-        android:title="Parkplätze" />
+        android:title="@string/parking" />
     <group />
     <item
         android:id="@+id/Karte"
         android:icon="@android:drawable/ic_dialog_map"
-        android:title="Karte" />
+        android:title="@string/map" />
 </menu>
